# llm-internals-companion

./: .gitignore  README.md  pyproject.toml
examples/part_01_token_loop/: results.jsonl  selftest.py  token_loop.py
examples/part_02_attention/: attention_from_scratch.py  results.jsonl
examples/part_03_kv_cache/: kv_cache_demo.py  results_decode.jsonl  results_kv.jsonl
examples/part_04_sampling_self_consistency/: gsm8k_subset.jsonl  results_analysis.jsonl  results_samples.jsonl  self_consistency.py
examples/part_05_train_tiny/: results.jsonl  tiny_gpt.py
examples/part_06_photon_reproduction/: efficiency.jsonl  photon_mini.py  results.jsonl  results_seed1338.jsonl  results_seed1339.jsonl
llm_internals/: __init__.py
